--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,13 +4,13 @@ phases:
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
-      - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
+      - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin 590692511501.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
       - echo Ensuring repository exists...
       - |
         if ! aws ecr describe-repositories --repository-names $REPOSITORY_NAME; then
           aws ecr create-repository --repository-name $REPOSITORY_NAME
         fi
-      - REPOSITORY_URI="$AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$REPOSITORY_NAME"
+      - REPOSITORY_URI="590692511501.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$REPOSITORY_NAME"
   build:
     commands:
       - echo Building the Docker image...
