--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,6 +3,9 @@ version: 0.2
 phases:
   pre_build:
     commands:
+      - echo Clonning git repo ...
+      - git clone https://github.com/omor13/bluetech_project.git
+      - cd bluetech_project
       - echo Logging in to Amazon ECR...
       - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin 590692511501.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
       - echo Ensuring repository exists...
